# ultimate_college_erp

./: .env.example  DEPLOYMENT.md  README.md  RUN.md  pyproject.toml  render.yaml
backend/: .env  .env.example  Dockerfile  requirements.txt
backend/src/: config.py  db.py  main.py
backend/src/applications/: routes.py
backend/src/assignments/: routes.py
backend/src/attendance/: routes.py
backend/src/auth/: __init__.py  deps.py  jwt.py  password.py  routes.py
backend/src/classes/: routes.py
backend/src/exams/: routes.py
backend/src/finance/: routes.py
backend/src/learning/: routes.py
backend/src/messages/: routes.py
backend/src/parents/: routes.py
backend/src/reports/: routes.py
backend/src/results/: routes.py
backend/src/students/: routes.py
backend/src/subjects/: routes.py
backend/src/teachers/: routes.py
backend/src/uploads/: routes.py
backend/src/users/: routes.py
database/: schema.sql  seed.sql
frontend/: .env.production  index.html  netlify.toml  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/auth/: AuthContext.jsx
frontend/src/components/: AnimateOnScroll.jsx  HeroSlider.jsx  PageBanner.jsx  SEO.jsx  StatsSection.jsx
frontend/src/layouts/: DashboardLayout.jsx  PublicLayout.jsx
frontend/src/pages/admin/: AdminApplications.jsx  AdminClasses.jsx  AdminDashboard.jsx  AdminFinance.jsx  AdminMessages.jsx  AdminReports.jsx  AdminStudents.jsx  AdminTeachers.jsx
frontend/src/pages/parent/: ParentDashboard.jsx  (+1 more)
frontend/src/services/: api.js
frontend/src/themes/: global.css
(+20 files in other folders)
