[tool.poetry]
name = "ultimate-college-erp"
version = "0.1.0"
description = "High School ERP System"
authors = ["Shelby <shelby@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.109.2"
uvicorn = {extras = ["standard"], version = "0.27.1"}
python-multipart = "0.0.9"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
bcrypt = ">=4.0.0,<5"
psycopg2-binary = "2.9.9"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
email-validator = "2.1.0"
python-dotenv = "1.0.1"
reportlab = "4.0.9"
aiofiles = "23.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
